RESOLVED FIXED127793
REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_operationInProgress ASSERT vs DelayedReleaseScope)
https://bugs.webkit.org/show_bug.cgi?id=127793
Summary REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_opera...
Geoffrey Garen
Reported 2014-01-28 13:49:52 PST
REGRESSION: JavascriptCore crash during OS Installation (due to Heap::m_operationInProgress ASSERT vs DelayedReleaseScope)
Attachments
Patch (4.47 KB, patch)
2014-01-28 15:03 PST, Geoffrey Garen
mhahnenberg: review+
Geoffrey Garen
Comment 1 2014-01-28 13:50:12 PST
Geoffrey Garen
Comment 2 2014-01-28 15:03:01 PST
Mark Hahnenberg
Comment 3 2014-01-28 15:04:50 PST
Comment on attachment 222499 [details] Patch r=me
Geoffrey Garen
Comment 4 2014-01-28 15:07:41 PST
Note You need to log in before you can comment on or make changes to this bug.